# llm-rs

./: .gitignore  Cargo.toml  README.md  vocab.json
src/: bigram.rs  bpe.rs  cli.rs  dataset.rs  gpt.rs  lib.rs  main.rs  sampling.rs  training.rs  transformer.rs
