[package]
name = "nanogpt-ish"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
candle-core = { git = "https://github.com/huggingface/candle.git", version = "0.10.2" }
candle-nn = { git = "https://github.com/huggingface/candle.git", version = "0.10.2" }
clap = { version = "4", features = ["derive"] }
rand = "0.10.0"
serde_json = "1.0.149"

[features]
default = []
cuda = ["candle-core/cuda"]